deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeserver
  labels:
    app: nodeserver
spec:
  selector:
    matchLabels:
      app: nodeserver
  replicas: 1
  template:
    metadata:
      name: nodeserver
      labels:
        app: nodeserver
    spec:
      containers:
        - name: nodeserver
          image: andradereginaldo/node_k8s:3.1

          startupProbe:
            httpGet:
              path: /healthz
              port: 4000
            periodSeconds: 3
            failureThreshold: 10

          readinessProbe:
            httpGet:
              path: /healthz
              port: 4000
            periodSeconds: 3
            failureThreshold: 1
            initialDelaySeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: 4000
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 15

          resources:
            requests:
              cpu: 250m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 150Mi
