pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nodeserver
  labels:
    app: nodeserver
spec:
  containers:
    - name: nodeserver
      image: andradereginaldo/node_k8s
